--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,3 @@
-// Styles
-// CoreUI Icons Set
-@import '~@coreui/icons/css/coreui-icons.css';
-// Import Flag Icons Set
-@import '~flag-icon-css/css/flag-icon.min.css';
-// Import Font Awesome Icons Set
-@import '~font-awesome/css/font-awesome.min.css';
-// Import Simple Line Icons Set
-@import '~simple-line-icons/css/simple-line-icons.css';
-// Import Main styles for this application
 @import './scss/style.scss';
 
 @import "../node_modules/@syncfusion/ej2-base/styles/material.css";
@@ -25,4 +15,62 @@
 }
 .toast-warning {
   background-color: #F89406!important;
+}
+.auth-bg{
+  text-align: center;
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-image: linear-gradient(79deg, #7439db, #C66FBC 48%, #F7944D);
+
+  label {
+    text-align: left;
+    padding: 0.25rem 0;
+  }
+
+  input {
+    margin: 0.5rem 0;
+    padding: 1rem;
+    border: none;
+    border-radius: 10px;
+  }
+
+  .button-auth {
+    border: none;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #7439db;
+  }
+}
+
+.auth-form-container, .login-form, .register-form {
+  display: flex;
+  flex-direction: column;
+}
+
+
+@media screen and (min-width: 600px) {
+  .auth-form-container {
+    padding: 5rem;
+    border: 1px solid white;
+    border-radius: 10px;
+    margin: 0.5rem;
+  }
+  .auth-container{
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 7% 2% 7% 2%;
+  }
+}
+
+.link-btn {
+  border: none;
+  background: none;
+  color: white;
+  text-decoration: underline;
+  padding: 20px;
 }
