--- a/src/App.scss
+++ b/src/App.scss
@@ -68,7 +68,7 @@
   .auth-container{
     border: 1px solid white;
     border-radius: 10px;
-    padding: 7% 2% 7% 2%;
+    padding: 6% 2% 6% 2%;
   }
 }
 
@@ -78,6 +78,17 @@
   color: white;
   text-decoration: underline;
   padding: 20px;
+}
+
+.forgot-btn-link{
+  border: none;
+  background: none;
+  color: white;
+  text-decoration: underline;
+  text-align: left;
+  width: 100%;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .cover-img{
